# odeus

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  DOCS.md  LICENSE  Makefile  README.md
builtins/: CMakeLists.txt  constrol_flow.c  forms.c  list.c  macros.c  math.c  module.c  set_builtins.c  stdio.c  strings.c  typeof.c  typep.c
builtins/include/builtins/: constrol_flow.h  forms.h  list.h  macros.h  math.h  module.h  set_builtins.h  stdio.h  strings.h  typeof.h  typep.h
core/: CMakeLists.txt  ast.c  ast.h  ast_to_string.c  core_error.h  environment.c  environment.h  eval.c  eval.h  intern_string.c  lexer.c  lexer.h  module_map.c  odeus_core_error.h  odeus_environment.c  odeus_environment.h  odeus_eval.c  odeus_eval.h  odeus_lexer.c  odeus_lexer.h  odeus_make_asts.c  odeus_parser.c  odeus_parser.h  odeus_token.h  parser.c  parser.h  quasiquote.c  symbol_map.c  token.h  value.c  value_to_string.c
core/builtins/: basic_math.c  basic_math.h  forms.c  forms.h  odeus_basic_math.c  odeus_basic_math.h  odeus_forms.h  odeus_primitives.c  odeus_primitives.h  odeus_set_builtins.h  primitives.c  primitives.h  set_builtins.c  set_builtins.h
core/include/core/: ast.h  core_error.h  environment.h  eval.h  intern_string.h  lexer.h  meta.h  module_map.h  parser.h  quasiquote.h  symbol_map.h  token.h  value.h
repl/: odeus_repl.c  repl.c
std/: basic_math.h  primitives.c  primitives.h  set_builtins.h
stdio/: prelude.ode
tests/: lexer_test.c  lexer_test.ode  odeus_lexer_test.c  odeus_lexer_test.ode  odeus_parser_test.c  odeus_parser_test.ode  parser_test.c  parser_test.ode
